<?php
include_once "Beverage.php";

/**
 * 调料类
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/1
 * Time: 8:34
 */
class CondimentDecorator extends Beverage {
    protected $_beverage;

    public function __construct(Beverage $beverage) {
        $this->_beverage = $beverage;
    }

    public function getDescription()
    {
        return parent::getDescription(); // TODO: Change the autogenerated stub
    }

    public function cost()
    {
        // TODO: Implement cost() method.
    }
}