<?php
include_once "Beverage.php";

/**
 * 深焙
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/1
 * Time: 8:19
 */
class DarkRoast extends Beverage {
    /**
     * 获取信息
     * @return string
     */
    public function getDescription()
    {
        $this->setDescription('深烘');
        return parent::getDescription(); // TODO: Change the autogenerated stub
    }

    /**
     * 获取价格
     * @return string
     */
    public function cost()
    {
        // TODO: Implement cost() method.
        return 1.99;
    }
}